@@ -63,7 +63,7 @@
         "name": "Сковорода Никита Андреевич",
         "email": "chalkerx@gmail.com"
     }],
-    "version": "1.9.7-12",
+    "version": "1.9.7-13",
     "homepage": "http://www.totaljs.com",
     "bugs": {
         "url": "https://github.com/totaljs/framework/issues",
