@@ -5,10 +5,12 @@
 - added: `config['default-response-maxage']`, default value `11111111`
 - added: `U.get(obj, path)` reads a value from `obj` by path
 - added: `U.set(obj, path, value)` sets a value into `obj` by path
+- added: (IMPORTANT) `config['default-root']` can replace root relative path
 
 - updated: (IMPORTANT) Array.async([NEW: threadCount (Number)], [callback]) supports `threads`
 - updated: Date.format(format, [resource_name]) supports name of months via `MMM` (short) and `MMMM` (full)
 - updated: Resources support months e.g. `January     : Január`
+- updated: `F.merge()` supports directories, e.g. `F.merge('app.js', '/js/*.js')`
 
 - fixed: (IMPORTNAT) view caching
 - fixed: binary / executable for Windows
